<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#cccccc" >
    
    <!-- 标题栏 -->
    <RelativeLayout 
        android:id="@+id/mark_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height" >
        <TextView 
            android:text="@string/title_mark"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_textsize"
            android:textColor="#000000" />
    </RelativeLayout>
    
    <!-- 提示和按钮 -->
    <TextView 
        android:id="@+id/mark_phoneShow"
        android:layout_below="@id/mark_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/mark_tip"
        android:textSize="@dimen/title_textsize"
        android:textColor="#ff5000" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mark_phoneShow"
        android:layout_centerHorizontal="true" >
        <Button
            android:id="@+id/mark_unm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mark_unm"
            android:textSize="@dimen/title_textsize"
            android:textColor="#000000"
            android:layout_margin="10dp"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/mark_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mark_m"
            android:textSize="@dimen/title_textsize"
            android:textColor="#000000"
            android:layout_margin="10dp"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    
</RelativeLayout>