<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009999" >
    
    <!-- 标题栏 -->
    <RelativeLayout 
        android:id="@+id/remind_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height" >
        <TextView 
            android:text="@string/title_remind"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_textsize"
            android:textColor="@color/title_textcolor"/>
    </RelativeLayout>
    
    <!-- 提示和按钮 -->
    <TextView 
        android:id="@+id/remind_phoneShow"
        android:layout_below="@id/remind_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/remind_answer"
        android:textSize="@dimen/title_textsize"
        android:textColor="@color/title_textcolor"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/remind_phoneShow"
        android:layout_centerHorizontal="true" >
        <Button
            android:id="@+id/remind_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remind_cancel"
            android:textSize="@dimen/title_textsize"
            android:textColor="@color/title_textcolor"
            android:layout_margin="10dp"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/remind_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remind_answer"
            android:textSize="@dimen/title_textsize"
            android:textColor="@color/title_textcolor"
            android:layout_margin="10dp"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    
</RelativeLayout>